--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@
 :root {
 	/* === Primary === */
 	--lightRed: hsl(356, 100%, 66%);
-	--veryLightRed: hsl(355, 100%, 74%);
+	--veryLightRedHover: hsl(355, 100%, 74%);
 	--veryDarkBlue: hsl(208, 49%, 24%);
 
 	/* === Neutral === */
 
 	--white: hsl(0, 0%, 100%);
 	--grayishBlue: hsl(240, 2%, 79%);
-	--VeryDarkGrayishBlue: hsl(207, 13%, 34%);
-	--VeryDarkBlackBlue: hsl(240, 10%, 16%);
+	--veryDarkGrayishBlue: hsl(207, 13%, 34%);
+	--veryDarkBlackBlue: hsl(240, 10%, 16%);
 
 	/* === Gradient === */
 
@@ -65,24 +65,11 @@ nav {
 	position: static;
 	display: flex;
 	justify-content: space-between;
+	padding: 0 80px;
 }
-.menu_container{
-	display: flex;
-	align-items: center;
-}
-
-.nav_menu {
-	display: flex;
-	align-items: center;
+ul {
 	list-style: none;
-	padding-left: 40px;
 }
-
-.nav_menu > li {
-	padding: 0 20px;
-	font-weight: bold;
-}
-
 button {
 	width: 137px;
 	height: 48px;
@@ -91,9 +78,93 @@ button {
 	background-color: var(--white);
 	border: none;
 	border-radius: 28px;
-	font-family: "Ubuntu", sans-serif;
 	font-weight: bold;
 	font-size: 16px;
+	transition: 0.3s;
+}
+button:hover {
+	color: var(--white);
+	background-color: var(--veryLightRedHover);
+}
+a {
+	text-decoration: none;
+}
+button,
+a,
+li {
+	font-family: "Ubuntu", sans-serif;
+}
+
+button,
+a {
+	cursor: pointer;
+}
+
+li > a {
+	position: relative;
+	display: block;
+	padding: 0.2em 0;
+	color: var(--white);
+}
+
+li > a::after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0.1em;
+	background-color: var(--white);
+	opacity: 0;
+	transition: opacity 300ms, transform 300ms;
+}
+
+li > a:hover::after,
+li > a:focus::after,
+li > a:focus ~ .sub_menu  {
+	opacity: 1;
+	transform: translate3d(0, 0.2em, 0);
+}
+.menu_container {
+	display: flex;
+	align-items: center;
+}
+
+.nav_menu {
+	display: flex;
+	align-items: center;
+	padding-left: 40px;
+}
+
+.nav_menu > li {
+	padding: 0 20px;
+	font-weight: bold;
+}
+
+.sub_menu {
+	/* display: none; */
+	opacity: 0;
+	transition: opacity 300ms, transform 300ms;
+
+	position: absolute;
+	width: 168px;
+	margin-top: 30px;
+	padding: 20px;
+	border-radius: 5px;
+	background-color: var(--white);
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
+	color: var(--veryDarkBlackBlue);
+	font-weight: 300;
+}
+
+.sub_menu li {
+	padding: 10px 0;
+}
+.sub_menu a {
+	color: inherit;
+}
+.sub_menu a:hover {
+	font-weight: bold;
 }
 
 .title {
@@ -103,16 +174,27 @@ button {
 	justify-content: center;
 	width: 920px;
 	height: 219px;
-	margin: 135px auto 0;
+	margin: 125px auto 0;
 	z-index: 100;
 }
-.call_to_action{
+.call_to_action {
 	margin-top: 40px;
 }
-.learn_more_btn {
+.call_to_action button:nth-child(2) {
 	border: 1px solid var(--white);
 	background: transparent;
 	color: var(--white);
+}
+.call_to_action button:nth-child(2):hover {
+	background-color: var(--white);
+	color: var(--lightRed);
+}
+
+.singup_container > a {
+	text-decoration: none;
+	color: var(--white);
+	font-weight: bold;
+	margin-right: 20px;
 }
 .hero {
 	position: relative;
